--- a/Home.html
+++ b/Home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -55,7 +55,7 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a href="Home.html" class="nav-link">Home</a></li>
-                                <li class="nav-item"><a href="Home/WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a>
+                                
                                 </li>
                                 <li class="nav-item dropdown simple-dropdown">
                                     <a href="ProviderServices.html" class="nav-link">Provider Services</a>
@@ -106,6 +106,7 @@
                                     <i class="fa-solid fa-angle-down dropdown-toggle" id="PayerSolutionsLink"
                                         role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
                                     <ul class="dropdown-menu" aria-labelledby="PayerSolutionsLink">
+                                        <li><a href="PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a></li>
                                         <li><a href="PayerSolutions/WorkmenCompensation.html">Workers' Compensation &
                                                 Auto Insurance</a></li>
                                         <li><a href="PayerSolutions/MedicalReview.html">Medical Review & Claim
@@ -114,9 +115,8 @@
                                                 Services</a></li>
                                         <li><a href="PayerSolutions/FormConversion.html">CMS-1500/UB-04 Elec. Data Form
                                                 Conversion</a></li>
-                                        <li><a href="PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a></li>
                                     </ul>
-
+                                    <li class="nav-item"><a href="Home/WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a>    
                                 <li class="nav-item"><a href="Home/Contact.html" class="nav-link">Contact</a></li>
                             </ul>
                         </div>
@@ -1372,7 +1372,7 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-3 order-lg-2">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Company</span>
                             <ul>
-                                <li><a href="Home/WhyChooseUs.html">Why Choose Us</a></li>
+                                <li><a href="Home/WhatMakesUsUnique.html">Why Us Over All?</a></li>
                                 <li><a href="Home/Contact.html">Contact us</a></li>
                             </ul>
                         </div>
