--- a/LaboratoryServices/LabManagement.html
+++ b/LaboratoryServices/LabManagement.html
@@ -36,11 +36,11 @@
                 <div class="container-fluid">
                     <div class="col-auto me-lg-0 me-auto">
                         <a class="navbar-brand" href="../Home.html">
-                            <img src="../Images/logo.jpg" alt="Dynamic IT Healthcare Solutions" class="default-logo"
+                            <img src="../Images/logo.jpg" alt="Dynamic IT Healthcare" class="default-logo"
                                 style="min-height: 75px">
-                            <img src="../Images/logo.jpg" alt="Dynamic IT Healthcare Solutions" class="alt-logo"
+                            <img src="../Images/logo.jpg" alt="Dynamic IT Healthcare" class="alt-logo"
                                 style="min-height: 50px">
-                            <img src="../Images/logo.jpg" alt="Dynamic IT Healthcare Solutions" class="mobile-logo"
+                            <img src="../Images/logo.jpg" alt="Dynamic IT Healthcare" class="mobile-logo"
                                 style="min-height: 50px">>
                         </a>
                     </div>
@@ -55,8 +55,6 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a href="../Home.html" class="nav-link">Home</a></li>
-                                <li class="nav-item"><a href="../Home/WhatMakesUsUnique.html" class="nav-link">Why Us
-                                        Over All?</a></li>
                                 <li class="nav-item dropdown simple-dropdown">
                                     <a href="../ProviderServices.html" class="nav-link">Provider Services</a>
                                     <i class="fa-solid fa-angle-down dropdown-toggle" id="ProviderServicesLink"
@@ -101,6 +99,7 @@
                                     <i class="fa-solid fa-angle-down dropdown-toggle" id="PayerSolutionsLink"
                                         role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
                                     <ul class="dropdown-menu" aria-labelledby="PayerSolutionsLink">
+                                        <li><a href="../PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a>
                                         <li><a href="../PayerSolutions/WorkmenCompensation.html">Workers' Compensation &
                                                 Auto Insurance</a></li>
                                         <li><a href="../PayerSolutions/MedicalReview.html">Medical Review & Claim
@@ -109,10 +108,10 @@
                                                 Services</a></li>
                                         <li><a href="../PayerSolutions/FormConversion.html">CMS-1500/UB-04 Elec. Data
                                                 Form Conversion</a></li>
-                                        <li><a href="../PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a>
                                         </li>
                                     </ul>
-
+                                    <li class="nav-item"><a href="../Home/WhatMakesUsUnique.html" class="nav-link">Why Us
+                                        Over All?</a></li>
                                 <li class="nav-item"><a href="../Home/Contact.html" class="nav-link">Contact</a></li>
                             </ul>
                         </div>
@@ -216,17 +215,14 @@
                         </div>
                         <div class="col-lg-8 order-1 order-lg-2 md-mb-50px"
                             data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Making Certain High-Quality,
-                                Effective, and Compliant Operations</h5>
-                            <p>For a clinical laboratory to operate successfully, effective lab management is necessary.
-                                A wide range of tasks are included in lab management services with the goal of
-                                guaranteeing effectiveness, adherence to regulations, quality, and safety. Using a
-                                professional laboratory
-<br>
-                                Clinical laboratories can guarantee effective, compliant, and high-quality operations
-                                with the management services offered by Dynamic IT Healthcare, which will eventually
-                                improve patient outcomes and laboratory performance.
-                            </p>
+                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Ensuring Efficient, Compliant,
+                                and High-Quality Operations</h5>
+                            <p>Effective lab management is essential for the successful operation of a clinical
+                                laboratory. Lab management services encompass a broad range of activities aimed at
+                                ensuring efficiency, compliance, quality, and safety. By leveraging professional lab
+                                management services provided by Dynamic IT Healthcare, clinical laboratories can
+                                ensure efficient, compliant, and high-quality operations, ultimately leading to better
+                                patient outcomes and improved laboratory performance.</p>
 
                             <h6 class="text-dark-gray fw-700 alt-font d-block mt-5">Key Areas of Lab Management</h6>
 
@@ -614,19 +610,21 @@
                         <!-- start footer column -->
                         <div
                             class="col-6 col-xl-3 col-lg-12 col-sm-6 last-paragraph-no-margin text-xl-start text-lg-center order-sm-1 lg-mb-50px sm-mb-30px">
-                            <a href="../Home.html" class="footer-logo mb-15px d-inline-block"><img
-                                    src="../Images/logo.jpg" alt="Dynamic IT Healthcare" style="min-height: 85px"></a>
+                            <a href="Home.html" class="footer-logo mb-15px d-inline-block"><img src="Images/logo.jpg"
+                                    alt="Dynamic IT Healthcare" style="min-height: 85px"></a>
                             <p class="lh-30 w-100 xl-w-100 mx-lg-auto mx-xl-0">New Perspectives. Global Success.</p>
                             <div class="elements-social social-icon-style-02 mt-20px xs-mt-15px">
                                 <ul class="medium-icon dark">
-                                    <li class="my-0"><a class="facebook" href="https://www.facebook.com/"
+                                    <li class="my-0"><a class="facebook"
+                                            href="https://www.facebook.com/"
                                             target="_blank" rel="noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
                                     </li>
-                                    <li class="my-0"><a class="linkedin" href="https://www.linkedin.com/company/"
+                                    <li class="my-0"><a class="linkedin"
+                                            href="https://www.linkedin.com/company/"
                                             target="_blank" rel="noreferrer"><i class="fa-brands fa-linkedin"></i></a>
                                     </li>
-                                    <li class="my-0"><a class="twitter" href="https://twitter.com/" target="_blank"
-                                            rel="noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
+                                    <li class="my-0"><a class="twitter" href="https://twitter.com/"
+                                            target="_blank" rel="noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
                                     </li>
                                     <!-- <li class="my-0"><a class="instagram" href="#"><i class="fa-brands fa-instagram"></i></a></li> -->
                                 </ul>
@@ -637,8 +635,8 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-3 order-lg-2">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Company</span>
                             <ul>
-                                <li><a href="../Home/WhyChooseUs.html">Why Choose Us</a></li>
-                                <li><a href="../Home/Contact.html">Contact us</a></li>
+                                <li><a href="../Home/WhatMakesUsUnique.html">Why Us Over All?</a></li>
+                                <li><a href="Home/Contact.html">Contact us</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
@@ -646,9 +644,9 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-4 order-lg-3">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Services</span>
                             <ul>
-                                <li><a href="../ProviderServices.html">Provider Services</a></li>
-                                <li><a href="../PayerSolutions.html">Payer Solutions</a></li>
-                                <li><a href="../ProviderServices/LaboratoryServices.html">Laboratory Services</a></li>
+                                <li><a href="ProviderServices.html">Provider Services</a></li>
+                                <li><a href="PayerSolutions.html">Payer Solutions</a></li>
+                                <li><a href="ProviderServices/LaboratoryServices.html">Laboratory Services</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
@@ -656,16 +654,16 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-5 order-lg-4">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Customer</span>
                             <ul>
-                                <li><a href="../Home/PrivacyPolicy.html">Privacy policy</a></li>
-                                <li><a href="../Home/TermsAndConditions.html">Terms and conditions</a></li>
-                                <li><a href="../Home/Contact.html">Feedback</a></li>
+                                <li><a href="Home/PrivacyPolicy.html">Privacy policy</a></li>
+                                <li><a href="Home/TermsAndConditions.html">Terms and conditions</a></li>
+                                <li><a href="Home/Contact.html">Feedback</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
                         <!-- start footer column -->
                         <div class="col-xl-3 col-lg-3 col-sm-6 md-mb-50px sm-mb-30px xs-mb-0 order-sm-2 order-lg-5"
                             style="margin-top:-20px">
-                            <img src="../Images/qrcode_dynamicithealthcare.com.png" alt="Dynamic IT Healthcare">
+                            <img src="Images/qrcode_dynamicithealthcare.com.png" alt="Dynamic IT Healthcare">
                         </div>
                         <!-- end footer column -->
                     </div>
@@ -686,7 +684,8 @@
                         <!-- start powered by -->
                         <div
                             class="col-lg-6 pt-35px pb-35px md-pt-0 order-3 order-lg-3 text-center text-lg-end last-paragraph-no-margin">
-                            <text>Powered by <a href="#" target="_blank" rel="noopener noreferrer"
+                            <text>Powered by <a href="#" target="_blank"
+                                    rel="noopener noreferrer"
                                     class="text-dark-gray fw-600 text-decoration-line-bottom">RamaMano</a></text>
                         </div>
                         <!-- end  powered by -->
