--- a/LaboratoryServices/QualityRegulatoryComplianceAuditing.html
+++ b/LaboratoryServices/QualityRegulatoryComplianceAuditing.html
@@ -55,7 +55,6 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a href="../Home.html" class="nav-link">Home</a></li>
-                                <li class="nav-item"><a href="../Home/WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a></li>
                                 <li class="nav-item dropdown simple-dropdown">
                                     <a href="../ProviderServices.html" class="nav-link">Provider Services</a>
                                     <i class="fa-solid fa-angle-down dropdown-toggle" id="ProviderServicesLink"
@@ -100,6 +99,7 @@
                                     <i class="fa-solid fa-angle-down dropdown-toggle" id="PayerSolutionsLink"
                                         role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
                                     <ul class="dropdown-menu" aria-labelledby="PayerSolutionsLink">
+                                        <li><a href="../PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a>
                                         <li><a href="../PayerSolutions/WorkmenCompensation.html">Workers' Compensation &
                                                 Auto Insurance</a></li>
                                         <li><a href="../PayerSolutions/MedicalReview.html">Medical Review & Claim
@@ -108,10 +108,10 @@
                                                 Services</a></li>
                                         <li><a href="../PayerSolutions/FormConversion.html">CMS-1500/UB-04 Elec. Data
                                                 Form Conversion</a></li>
-                                        <li><a href="../PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a>
                                         </li>
                                     </ul>
-
+                                    <li class="nav-item"><a href="../Home/WhatMakesUsUnique.html" class="nav-link">Why Us
+                                        Over All?</a></li>
                                 <li class="nav-item"><a href="../Home/Contact.html" class="nav-link">Contact</a></li>
                             </ul>
                         </div>
@@ -215,12 +215,15 @@
                         </div>
                         <div class="col-lg-8 order-1 order-lg-2 md-mb-50px"
                             data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Recognizing Opportunities for Improvement, Maintaining Compliance, and Improving Performance
-                            </h5>
-                            <p>Conducting quality, regulatory, and compliance audits is a crucial procedure to guarantee that clinical laboratories maintain high-quality operations, comply with regulatory requirements, and follow industry standards.  These audits aid in pinpointing areas in need of development, guaranteeing adherence to pertinent regulations, and improving overall laboratory performance. </
-                            </p>
-                            <p> Clinical laboratories may make sure they uphold high levels of quality, adhere to regulatory requirements, and efficiently manage compliance risks by incorporating these auditing methods provided by Dynamic IT Healthcare.
-                            </p>
+                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Identifying Areas for
+                                Improvement, Ensuring Compliance, and Enhancing Performance</h5>
+                            <p>Quality, regulatory, and compliance auditing are essential practices for ensuring that
+                                clinical laboratories adhere to industry standards, meet regulatory requirements, and
+                                maintain high-quality operations. These audits help identify areas for improvement,
+                                ensure compliance with relevant laws, and enhance overall laboratory performance.</p>
+                            <p> By integrating these auditing practices offered by Dynamic IT Healthcare,
+                                clinical laboratories can ensure they maintain high standards of quality, comply with
+                                regulatory requirements, and manage compliance risks effectively.</p>
                             <hr>
 
                             <div class="text-center text-lg-start">
@@ -415,19 +418,21 @@
                         <!-- start footer column -->
                         <div
                             class="col-6 col-xl-3 col-lg-12 col-sm-6 last-paragraph-no-margin text-xl-start text-lg-center order-sm-1 lg-mb-50px sm-mb-30px">
-                            <a href="../Home.html" class="footer-logo mb-15px d-inline-block"><img
-                                    src="../Images/logo.jpg" alt="Dynamic IT Healthcare" style="min-height: 85px"></a>
+                            <a href="Home.html" class="footer-logo mb-15px d-inline-block"><img src="Images/logo.jpg"
+                                    alt="Dynamic IT Healthcare" style="min-height: 85px"></a>
                             <p class="lh-30 w-100 xl-w-100 mx-lg-auto mx-xl-0">New Perspectives. Global Success.</p>
                             <div class="elements-social social-icon-style-02 mt-20px xs-mt-15px">
                                 <ul class="medium-icon dark">
-                                    <li class="my-0"><a class="facebook" href="https://www.facebook.com/"
+                                    <li class="my-0"><a class="facebook"
+                                            href="https://www.facebook.com/"
                                             target="_blank" rel="noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
                                     </li>
-                                    <li class="my-0"><a class="linkedin" href="https://www.linkedin.com/company/"
+                                    <li class="my-0"><a class="linkedin"
+                                            href="https://www.linkedin.com/company/"
                                             target="_blank" rel="noreferrer"><i class="fa-brands fa-linkedin"></i></a>
                                     </li>
-                                    <li class="my-0"><a class="twitter" href="https://twitter.com/" target="_blank"
-                                            rel="noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
+                                    <li class="my-0"><a class="twitter" href="https://twitter.com/"
+                                            target="_blank" rel="noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
                                     </li>
                                     <!-- <li class="my-0"><a class="instagram" href="#"><i class="fa-brands fa-instagram"></i></a></li> -->
                                 </ul>
@@ -438,8 +443,8 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-3 order-lg-2">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Company</span>
                             <ul>
-                                <li><a href="../Home/WhyChooseUs.html">Why Choose Us</a></li>
-                                <li><a href="../Home/Contact.html">Contact us</a></li>
+                                <li><a href="../Home/WhatMakesUsUnique.html">Why Us Over All?</a></li>
+                                <li><a href="Home/Contact.html">Contact us</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
@@ -447,9 +452,9 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-4 order-lg-3">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Services</span>
                             <ul>
-                                <li><a href="../ProviderServices.html">Provider Services</a></li>
-                                <li><a href="../PayerSolutions.html">Payer Solutions</a></li>
-                                <li><a href="../ProviderServices/LaboratoryServices.html">Laboratory Services</a></li>
+                                <li><a href="ProviderServices.html">Provider Services</a></li>
+                                <li><a href="PayerSolutions.html">Payer Solutions</a></li>
+                                <li><a href="ProviderServices/LaboratoryServices.html">Laboratory Services</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
@@ -457,16 +462,16 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-5 order-lg-4">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Customer</span>
                             <ul>
-                                <li><a href="../Home/PrivacyPolicy.html">Privacy policy</a></li>
-                                <li><a href="../Home/TermsAndConditions.html">Terms and conditions</a></li>
-                                <li><a href="../Home/Contact.html">Feedback</a></li>
+                                <li><a href="Home/PrivacyPolicy.html">Privacy policy</a></li>
+                                <li><a href="Home/TermsAndConditions.html">Terms and conditions</a></li>
+                                <li><a href="Home/Contact.html">Feedback</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
                         <!-- start footer column -->
                         <div class="col-xl-3 col-lg-3 col-sm-6 md-mb-50px sm-mb-30px xs-mb-0 order-sm-2 order-lg-5"
                             style="margin-top:-20px">
-                            <img src="../Images/qrcode_dynamicithealthcare.com.png" alt="Dynamic IT Healthcare">
+                            <img src="Images/qrcode_dynamicithealthcare.com.png" alt="Dynamic IT Healthcare">
                         </div>
                         <!-- end footer column -->
                     </div>
@@ -487,7 +492,8 @@
                         <!-- start powered by -->
                         <div
                             class="col-lg-6 pt-35px pb-35px md-pt-0 order-3 order-lg-3 text-center text-lg-end last-paragraph-no-margin">
-                            <text>Powered by <a href="#" target="_blank" rel="noopener noreferrer"
+                            <text>Powered by <a href="#" target="_blank"
+                                    rel="noopener noreferrer"
                                     class="text-dark-gray fw-600 text-decoration-line-bottom">RamaMano</a></text>
                         </div>
                         <!-- end  powered by -->
