--- a/PayerSolutions.html
+++ b/PayerSolutions.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -55,7 +55,7 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a href="Home.html" class="nav-link">Home</a></li>
-                                <li class="nav-item"><a href="Home/WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a>
+                                
                                 </li>
                                 <li class="nav-item dropdown simple-dropdown">
                                     <a href="ProviderServices.html" class="nav-link">Provider Services</a>
@@ -106,6 +106,7 @@
                                     <i class="fa-solid fa-angle-down dropdown-toggle" id="PayerSolutionsLink"
                                         role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
                                     <ul class="dropdown-menu" aria-labelledby="PayerSolutionsLink">
+                                        <li><a href="PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a></li>
                                         <li><a href="PayerSolutions/WorkmenCompensation.html">Workers' Compensation &
                                                 Auto Insurance</a></li>
                                         <li><a href="PayerSolutions/MedicalReview.html">Medical Review & Claim
@@ -114,17 +115,14 @@
                                                 Services</a></li>
                                         <li><a href="PayerSolutions/FormConversion.html">CMS-1500/UB-04 Elec. Data Form
                                                 Conversion</a></li>
-                                        <li><a href="PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a></li>
                                     </ul>
-
+                                    <li class="nav-item"><a href="Home/WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a>    
                                 <li class="nav-item"><a href="Home/Contact.html" class="nav-link">Contact</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-auto col-xl-3 col-lg-2 text-end md-pe-0">
                         <div class="header-icon">
-                            <div class="header-search-icon icon">
-                            </div>
                             <div class="header-button ms-20px d-none d-xl-inline-block">
                                 <a href="Home/Contact.html"
                                     class="btn btn-rounded btn-transparent-light-gray border-1 btn-medium btn-switch-text text-transform-none">
@@ -250,14 +248,16 @@
                             <p class="lh-30 w-100 xl-w-100 mx-lg-auto mx-xl-0">New Perspectives. Global Success.</p>
                             <div class="elements-social social-icon-style-02 mt-20px xs-mt-15px">
                                 <ul class="medium-icon dark">
-                                    <li class="my-0"><a class="facebook" href="https://www.facebook.com" target="_blank"
-                                            rel="noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <li class="my-0"><a class="facebook"
+                                            href="https://www.facebook.com/"
+                                            target="_blank" rel="noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
                                     </li>
-                                    <li class="my-0"><a class="linkedin" href="https://www.linkedin.com/"
+                                    <li class="my-0"><a class="linkedin"
+                                            href="https://www.linkedin.com/company/"
                                             target="_blank" rel="noreferrer"><i class="fa-brands fa-linkedin"></i></a>
                                     </li>
-                                    <li class="my-0"><a class="twitter" href="https://twitter.com/" target="_blank"
-                                            rel="noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
+                                    <li class="my-0"><a class="twitter" href="https://twitter.com/"
+                                            target="_blank" rel="noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
                                     </li>
                                     <!-- <li class="my-0"><a class="instagram" href="#"><i class="fa-brands fa-instagram"></i></a></li> -->
                                 </ul>
@@ -268,7 +268,7 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-3 order-lg-2">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Company</span>
                             <ul>
-                                <li><a href="Home/WhyChooseUs.html">Why Choose Us</a></li>
+                                <li><a href="../Home/WhatMakesUsUnique.html">Why Us Over All?</a></li>
                                 <li><a href="Home/Contact.html">Contact us</a></li>
                             </ul>
                         </div>
@@ -310,14 +310,15 @@
                         <!-- start copyright -->
                         <div
                             class="col-lg-6 pt-35px pb-35px md-pt-0 order-1 order-lg-1 text-center text-lg-start last-paragraph-no-margin">
-                            <text>&copy; <span id="CurrentYear"></span> | All Rights Reserved by Dynamic IT
-                                Healthcare</text>
+                            <text>&copy; <span id="CurrentYear"></span> | All Rights Reserved by Dynamic IT Healthcare
+                            </text>
                         </div>
                         <!-- end copyright -->
                         <!-- start powered by -->
                         <div
                             class="col-lg-6 pt-35px pb-35px md-pt-0 order-3 order-lg-3 text-center text-lg-end last-paragraph-no-margin">
-                            <text>Powered by <a href="#" target="_blank" rel="noopener noreferrer"
+                            <text>Powered by <a href="#" target="_blank"
+                                    rel="noopener noreferrer"
                                     class="text-dark-gray fw-600 text-decoration-line-bottom">RamaMano</a></text>
                         </div>
                         <!-- end  powered by -->
