--- a/ProviderServices.html
+++ b/ProviderServices.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -55,7 +55,7 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a href="Home.html" class="nav-link">Home</a></li>
-                                <li class="nav-item"><a href="Home/WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a>
+                                
                                 </li>
                                 <li class="nav-item dropdown simple-dropdown">
                                     <a href="ProviderServices.html" class="nav-link">Provider Services</a>
@@ -106,6 +106,7 @@
                                     <i class="fa-solid fa-angle-down dropdown-toggle" id="PayerSolutionsLink"
                                         role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
                                     <ul class="dropdown-menu" aria-labelledby="PayerSolutionsLink">
+                                        <li><a href="PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a></li>
                                         <li><a href="PayerSolutions/WorkmenCompensation.html">Workers' Compensation &
                                                 Auto Insurance</a></li>
                                         <li><a href="PayerSolutions/MedicalReview.html">Medical Review & Claim
@@ -114,29 +115,27 @@
                                                 Services</a></li>
                                         <li><a href="PayerSolutions/FormConversion.html">CMS-1500/UB-04 Elec. Data Form
                                                 Conversion</a></li>
-                                        <li><a href="PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a></li>
                                     </ul>
-
+                                    <li class="nav-item"><a href="Home/WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a>    
                                 <li class="nav-item"><a href="Home/Contact.html" class="nav-link">Contact</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-auto col-xl-3 col-lg-2 text-end md-pe-0">
                         <div class="header-icon">
-                            <div class="header-search-icon icon">
-                                <div class="header-button ms-20px d-none d-xl-inline-block">
-                                    <a href="Home/Contact.html"
-                                        class="btn btn-rounded btn-transparent-light-gray border-1 btn-medium btn-switch-text text-transform-none">
-                                        <span>
-                                            <span class="btn-double-text fw-600" data-text="Free consultation">Free
-                                                consultation</span>
-                                            <span><i class="fa-regular fa-envelope"></i></span>
-                                        </span>
-                                    </a>
-                                </div>
+                            <div class="header-button ms-20px d-none d-xl-inline-block">
+                                <a href="Home/Contact.html"
+                                    class="btn btn-rounded btn-transparent-light-gray border-1 btn-medium btn-switch-text text-transform-none">
+                                    <span>
+                                        <span class="btn-double-text fw-600" data-text="Free consultation">Free
+                                            consultation</span>
+                                        <span><i class="fa-regular fa-envelope"></i></span>
+                                    </span>
+                                </a>
                             </div>
                         </div>
                     </div>
+                </div>
             </nav>
 
             <!-- end navigation -->
@@ -265,14 +264,16 @@
                             <p class="lh-30 w-100 xl-w-100 mx-lg-auto mx-xl-0">New Perspectives. Global Success.</p>
                             <div class="elements-social social-icon-style-02 mt-20px xs-mt-15px">
                                 <ul class="medium-icon dark">
-                                    <li class="my-0"><a class="facebook" href="https://www.facebook.com/"
+                                    <li class="my-0"><a class="facebook"
+                                            href="https://www.facebook.com/"
                                             target="_blank" rel="noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
                                     </li>
-                                    <li class="my-0"><a class="linkedin" href="https://www.linkedin.com/company/"
+                                    <li class="my-0"><a class="linkedin"
+                                            href="https://www.linkedin.com/company/"
                                             target="_blank" rel="noreferrer"><i class="fa-brands fa-linkedin"></i></a>
                                     </li>
-                                    <li class="my-0"><a class="twitter" href="https://twitter.com/" target="_blank"
-                                            rel="noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
+                                    <li class="my-0"><a class="twitter" href="https://twitter.com/"
+                                            target="_blank" rel="noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
                                     </li>
                                     <!-- <li class="my-0"><a class="instagram" href="#"><i class="fa-brands fa-instagram"></i></a></li> -->
                                 </ul>
@@ -283,7 +284,7 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-3 order-lg-2">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Company</span>
                             <ul>
-                                <li><a href="Home/WhyChooseUs.html">Why Choose Us</a></li>
+                                <li><a href="../Home/WhatMakesUsUnique.html">Why Us Over All?</a></li>
                                 <li><a href="Home/Contact.html">Contact us</a></li>
                             </ul>
                         </div>
@@ -332,7 +333,8 @@
                         <!-- start powered by -->
                         <div
                             class="col-lg-6 pt-35px pb-35px md-pt-0 order-3 order-lg-3 text-center text-lg-end last-paragraph-no-margin">
-                            <text>Powered by <a href="#" target="_blank" rel="noopener noreferrer"
+                            <text>Powered by <a href="#" target="_blank"
+                                    rel="noopener noreferrer"
                                     class="text-dark-gray fw-600 text-decoration-line-bottom">RamaMano</a></text>
                         </div>
                         <!-- end  powered by -->
