--- a/ProviderServices/BehavioralHealthBilling.html
+++ b/ProviderServices/BehavioralHealthBilling.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -53,19 +53,19 @@
                             <span class="navbar-toggler-line"></span>
                         </button>
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                            <ul class="navbar-nav">
-                                <li class="nav-item"><a href="../Home.html" class="nav-link">Home</a></li>
-                                <li class="nav-item"><a href="../Home/WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a></li>
+                            <ul class="navbar-nav justify-content-center"> <!-- Added justify-content-center here for centering -->
+                                <li class="nav-item">
+                                    <a href="../Home.html" class="nav-link">Home</a>
+                                </li>
+
                                 <li class="nav-item dropdown simple-dropdown">
                                     <a href="../ProviderServices.html" class="nav-link">Provider Services</a>
-                                    <i class="fa-solid fa-angle-down dropdown-toggle" id="ProviderServicesLink"
-                                        role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
+                                    <i class="fa-solid fa-angle-down dropdown-toggle" id="ProviderServicesLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
                                     <ul class="dropdown-menu" aria-labelledby="ProviderServicesLink">
                                         <li><a href="MedicalBilling.html">Medical Billing Services</a></li>
                                         <li><a href="MedicalRCMSolutions.html">Medical RCM Solutions</a></li>
                                         <li><a href="FQHCBilling.html">Federally Qualified Health Centers</a></li>
-                                        <li><a href="BehavioralHealthBilling.html">Behavioral Health Billing
-                                                Services</a></li>
+                                        <li><a href="BehavioralHealthBilling.html">Behavioral Health Billing Services</a></li>
                                         <li><a href="SpecialtyMedicalCoding.html">Speciality Medical Coding</a></li>
                                         <li><a href="ClinicalDocumentation.html">Clinical Documentation</a></li>
                                         <li><a href="HospitalBilling.html">Hospital Billing</a></li>
@@ -75,44 +75,37 @@
                                                 <i class="fa-solid fa-angle-right"></i>
                                             </a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="../LaboratoryServices/LabStartupServices.html">Lab Startup
-                                                        Services</a></li>
-                                                <li><a href="../LaboratoryServices/LabManagement.html">Lab
-                                                        Management</a></li>
-                                                <li><a href="../LaboratoryServices/LabConsulting.html">Lab
-                                                        Consulting</a></li>
-                                                <li><a href="../LaboratoryServices/InstrumentServicesSupplies.html">Instrument
-                                                        Services / Supplies</a></li>
-                                                <li><a href="../LaboratoryServices/RCMAuditingConsulting.html">RCM
-                                                        Auditing / Consulting</a></li>
-                                                <li><a
-                                                        href="../LaboratoryServices/QualityRegulatoryComplianceAuditing.html">Quality,
-                                                        Regulatory and Compliance Auditing</a></li>
-                                                <li><a href="../LaboratoryServices/SoftwareSolutions.html">Software
-                                                        Solutions</a></li>
+                                                <li><a href="../LaboratoryServices/LabStartupServices.html">Lab Startup Services</a></li>
+                                                <li><a href="../LaboratoryServices/LabManagement.html">Lab Management</a></li>
+                                                <li><a href="../LaboratoryServices/LabConsulting.html">Lab Consulting</a></li>
+                                                <li><a href="../LaboratoryServices/InstrumentServicesSupplies.html">Instrument Services / Supplies</a></li>
+                                                <li><a href="../LaboratoryServices/RCMAuditingConsulting.html">RCM Auditing / Consulting</a></li>
+                                                <li><a href="../LaboratoryServices/QualityRegulatoryComplianceAuditing.html">Quality, Regulatory and Compliance Auditing</a></li>
+                                                <li><a href="../LaboratoryServices/SoftwareSolutions.html">Software Solutions</a></li>
                                             </ul>
-
                                         </li>
                                     </ul>
                                 </li>
+
                                 <li class="nav-item dropdown simple-dropdown">
                                     <a href="../PayerSolutions.html" class="nav-link">Payer Solutions</a>
-                                    <i class="fa-solid fa-angle-down dropdown-toggle" id="PayerSolutionsLink"
-                                        role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
+                                    <i class="fa-solid fa-angle-down dropdown-toggle" id="PayerSolutionsLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
                                     <ul class="dropdown-menu" aria-labelledby="PayerSolutionsLink">
-                                        <li><a href="../PayerSolutions/WorkmenCompensation.html">Workers' Compensation &
-                                                Auto Insurance</a></li>
-                                        <li><a href="../PayerSolutions/MedicalReview.html">Medical Review & Claim
-                                                Repricing</a></li>
-                                        <li><a href="../PayerSolutions/ClaimsManagement.html">Claims Management & TPA
-                                                Services</a></li>
-                                        <li><a href="../PayerSolutions/FormConversion.html">CMS-1500/UB-04 Elec. Data
-                                                Form Conversion</a></li>
-                                        <li><a href="../PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a>
-                                        </li>
+                                        <li><a href="../PayerSolutions/MAO.html">HCC Coding & Medicare Advantage</a></li>
+                                        <li><a href="../PayerSolutions/WorkmenCompensation.html">Workers' Compensation & Auto Insurance</a></li>
+                                        <li><a href="../PayerSolutions/MedicalReview.html">Medical Review & Claim Repricing</a></li>
+                                        <li><a href="../PayerSolutions/ClaimsManagement.html">Claims Management & TPA Services</a></li>
+                                        <li><a href="../PayerSolutions/FormConversion.html">CMS-1500/UB-04 Elec. Data Form Conversion</a></li>
                                     </ul>
+                                </li>
 
-                                <li class="nav-item"><a href="../Home/Contact.html" class="nav-link">Contact</a></li>
+                                <li class="nav-item">
+                                    <a href="../Home/WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a href="../Home/Contact.html" class="nav-link">Contact</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -276,19 +269,21 @@
                         <!-- start footer column -->
                         <div
                             class="col-6 col-xl-3 col-lg-12 col-sm-6 last-paragraph-no-margin text-xl-start text-lg-center order-sm-1 lg-mb-50px sm-mb-30px">
-                            <a href="../Home.html" class="footer-logo mb-15px d-inline-block"><img
-                                    src="../Images/logo.jpg" alt="Dynamic IT Healthcare" style="min-height: 85px"></a>
+                            <a href="Home.html" class="footer-logo mb-15px d-inline-block"><img src="Images/logo.jpg"
+                                    alt="Dynamic IT Healthcare" style="min-height: 85px"></a>
                             <p class="lh-30 w-100 xl-w-100 mx-lg-auto mx-xl-0">New Perspectives. Global Success.</p>
                             <div class="elements-social social-icon-style-02 mt-20px xs-mt-15px">
                                 <ul class="medium-icon dark">
-                                    <li class="my-0"><a class="facebook" href="https://www.facebook.com/"
+                                    <li class="my-0"><a class="facebook"
+                                            href="https://www.facebook.com/"
                                             target="_blank" rel="noreferrer"><i class="fa-brands fa-facebook-f"></i></a>
                                     </li>
-                                    <li class="my-0"><a class="linkedin" href="https://www.linkedin.com/company/"
+                                    <li class="my-0"><a class="linkedin"
+                                            href="https://www.linkedin.com/company/"
                                             target="_blank" rel="noreferrer"><i class="fa-brands fa-linkedin"></i></a>
                                     </li>
-                                    <li class="my-0"><a class="twitter" href="https://twitter.com/" target="_blank"
-                                            rel="noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
+                                    <li class="my-0"><a class="twitter" href="https://twitter.com/"
+                                            target="_blank" rel="noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
                                     </li>
                                     <!-- <li class="my-0"><a class="instagram" href="#"><i class="fa-brands fa-instagram"></i></a></li> -->
                                 </ul>
@@ -299,8 +294,8 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-3 order-lg-2">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Company</span>
                             <ul>
-                                <li><a href="../Home/WhyChooseUs.html">Why Choose Us</a></li>
-                                <li><a href="../Home/Contact.html">Contact us</a></li>
+                                <li><a href="../Home/WhatMakesUsUnique.html">Why Us Over All?</a></li>
+                                <li><a href="Home/Contact.html">Contact us</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
@@ -308,9 +303,9 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-4 order-lg-3">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Services</span>
                             <ul>
-                                <li><a href="../ProviderServices.html">Provider Services</a></li>
-                                <li><a href="../PayerSolutions.html">Payer Solutions</a></li>
-                                <li><a href="../ProviderServices/LaboratoryServices.html">Laboratory Services</a></li>
+                                <li><a href="ProviderServices.html">Provider Services</a></li>
+                                <li><a href="PayerSolutions.html">Payer Solutions</a></li>
+                                <li><a href="ProviderServices/LaboratoryServices.html">Laboratory Services</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
@@ -318,16 +313,16 @@
                         <div class="col-6 col-xl-2 col-lg-3 col-sm-4 xs-mb-30px order-sm-5 order-lg-4">
                             <span class="fs-17 fw-600 d-block text-dark-gray mb-5px">Customer</span>
                             <ul>
-                                <li><a href="../Home/PrivacyPolicy.html">Privacy policy</a></li>
-                                <li><a href="../Home/TermsAndConditions.html">Terms and conditions</a></li>
-                                <li><a href="../Home/Contact.html">Feedback</a></li>
+                                <li><a href="Home/PrivacyPolicy.html">Privacy policy</a></li>
+                                <li><a href="Home/TermsAndConditions.html">Terms and conditions</a></li>
+                                <li><a href="Home/Contact.html">Feedback</a></li>
                             </ul>
                         </div>
                         <!-- end footer column -->
                         <!-- start footer column -->
                         <div class="col-xl-3 col-lg-3 col-sm-6 md-mb-50px sm-mb-30px xs-mb-0 order-sm-2 order-lg-5"
                             style="margin-top:-20px">
-                            <img src="../Images/qrcode_dynamicithealthcare.com.png" alt="Dynamic IT Healthcare">
+                            <img src="Images/qrcode_dynamicithealthcare.com.png" alt="Dynamic IT Healthcare">
                         </div>
                         <!-- end footer column -->
                     </div>
@@ -348,7 +343,8 @@
                         <!-- start powered by -->
                         <div
                             class="col-lg-6 pt-35px pb-35px md-pt-0 order-3 order-lg-3 text-center text-lg-end last-paragraph-no-margin">
-                            <text>Powered by <a href="#" target="_blank" rel="noopener noreferrer"
+                            <text>Powered by <a href="#" target="_blank"
+                                    rel="noopener noreferrer"
                                     class="text-dark-gray fw-600 text-decoration-line-bottom">RamaMano</a></text>
                         </div>
                         <!-- end  powered by -->
